--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,13 @@
-/* Importar tema de PrimeNG Aura (Modern Light Theme) */
-@import 'primeng/resources/themes/aura-light-blue/theme.css';
+// /* Importar tema de PrimeNG Aura (Modern Light Theme) */
+// @import 'primeng/resources/themes/aura-light-blue/theme.css';
 
-/* Importar estilos base de PrimeNG */
-@import 'primeng/resources/primeng.min.css';
+// /* Importar estilos base de PrimeNG */
+// @import 'primeng/resources/primeng.min.css';
 
-/* Importar PrimeIcons */
+@import '../node_modules/primeflex/primeflex.css';
 @import 'primeicons/primeicons.css';
-
-/* Importar PrimeFlex (Utilidades CSS) */
-@import 'primeflex/primeflex.css';
+@import '../node_modules/ngx-toastr/toastr.css';
+@import '../node_modules/quill/dist/quill.snow.css';
 
 /* ========================================
    VARIABLES GLOBALES DE DISEÑO
@@ -59,8 +58,18 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue',
-    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family:
+    'Inter',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol';
   font-size: 14px;
   color: var(--text-color);
   background-color: var(--surface-ground);
@@ -880,4 +889,3 @@ p {
     }
   }
 }
-
