--- a/src/app/contexts/flows/views/flows-form/flows-form.component.html
+++ b/src/app/contexts/flows/views/flows-form/flows-form.component.html
@@ -41,13 +41,13 @@
         <!-- Estado Activo -->
         <div class="form-field">
           <label for="isActive">Estado Activo</label>
-          <p-inputSwitch id="isActive" formControlName="isActive"></p-inputSwitch>
+          <p-toggleSwitch id="isActive" formControlName="isActive"></p-toggleSwitch>
         </div>
 
         <!-- Flujo por Defecto -->
         <div class="form-field">
           <label for="isDefault">Flujo por Defecto</label>
-          <p-inputSwitch id="isDefault" formControlName="isDefault"></p-inputSwitch>
+          <p-toggleSwitch id="isDefault" formControlName="isDefault"></p-toggleSwitch>
         </div>
       </div>
 
