--- a/src/app/contexts/destinations/views/destinations-form/destinations-form.component.html
+++ b/src/app/contexts/destinations/views/destinations-form/destinations-form.component.html
@@ -11,19 +11,34 @@
       <div class="form-grid">
         <div class="form-field">
           <label for="name" class="required">Nombre</label>
-          <input id="name" type="text" pInputText formControlName="name" placeholder="Ej: API Principal" [class.ng-invalid]="destinationForm.controls.name.invalid && destinationForm.controls.name.touched" />
+          <input
+            id="name"
+            type="text"
+            pInputText
+            formControlName="name"
+            placeholder="Ej: API Principal"
+            [class.ng-invalid]="destinationForm.controls.name.invalid && destinationForm.controls.name.touched"
+          />
           <small class="p-error" *ngIf="destinationForm.controls.name.invalid && destinationForm.controls.name.touched"> El nombre es requerido (mínimo 3 caracteres) </small>
         </div>
 
         <div class="form-field">
           <label for="type" class="required">Tipo</label>
-          <p-select id="type" formControlName="type" [options]="typeOptions" optionLabel="label" optionValue="value" placeholder="Seleccionar tipo" [style]="{ width: '100%' }"></p-select>
+          <p-select
+            id="type"
+            formControlName="type"
+            [options]="typeOptions"
+            optionLabel="label"
+            optionValue="value"
+            placeholder="Seleccionar tipo"
+            [style]="{ width: '100%' }"
+          ></p-select>
           <small class="p-error" *ngIf="destinationForm.controls.type.invalid && destinationForm.controls.type.touched"> El tipo es requerido </small>
         </div>
 
         <div class="form-field">
           <label for="isActive">Estado Activo</label>
-          <p-inputSwitch id="isActive" formControlName="isActive"></p-inputSwitch>
+          <p-toggleSwitch id="isActive" formControlName="isActive"></p-toggleSwitch>
         </div>
       </div>
 
@@ -61,7 +76,15 @@
 
           <div class="form-field">
             <label for="backoffMultiplier">Multiplicador de Backoff</label>
-            <p-inputNumber id="backoffMultiplier" formControlName="backoffMultiplier" [min]="1" [max]="5" [step]="0.5" [showButtons]="true" [style]="{ width: '100%' }"></p-inputNumber>
+            <p-inputNumber
+              id="backoffMultiplier"
+              formControlName="backoffMultiplier"
+              [min]="1"
+              [max]="5"
+              [step]="0.5"
+              [showButtons]="true"
+              [style]="{ width: '100%' }"
+            ></p-inputNumber>
           </div>
         </div>
       </div>
