Se deja la app funcionando

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -7,6 +7,6 @@
   </div>
 
   <nav class="sidebar-menu">
-    <p-menu [model]="menuItems" styleClass="w-full border-none"></p-menu>
+    <p-panelMenu [model]="menuItems" styleClass="w-full border-none"></p-panelMenu>
   </nav>
 </aside>
